# stremio-shell

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AppImage.makefile  ArchLinux.dockerfile  CMakeLists.txt  DEBIAN.md  DOCKER.md  Dockerfile  Fedora.dockerfile  Info.plist  Makefile  OpenSuseLeap.md  PKGBUILD  README.md  Ubuntu.dockerfile  WINDOWS.md  appdmg.json  appveyor.yml  autoupdater.cpp  autoupdater.h  autoupdater.js  build_arch.sh  build_deb.sh  build_rpm.sh  build_windows.bat  com.stremio.Stremio.json  deployment.pri  description-pak  fixdeps.sh  flatpak-commands.txt  main.cpp  main.qml  mainapplication.h  mediaPlayerKeys.cpp  mediaPlayerKeys.h  mkdmg.sh  mpv.cpp  mpv.h  (+27 more)
.github/workflows/: cmake-single-platform.yml  flatpak.yaml  shell.yaml
debian/: changelog  control  rules  stremio.install
dist-utils/: build-package.sh  generate-icons.sh
dist-utils/common/: description  get-version.sh  postinstall  preremove
distros/ArchLinux/: Dockerfile  PKGBUILD  mkconfig.sh  package.sh  stremio.install.tpl
distros/Debian/: Dockerfile  mkconfig.sh  package.sh
distros/Fedora/: Dockerfile  mkconfig.sh  package.sh  stremio.spec  stremio.spec.tpl
distros/Ubuntu/: Dockerfile  mkconfig.sh  package.sh
distros/Ubuntu22/: Dockerfile  mkconfig.sh
flatpak/assets/: com.stremio.Stremio.appdata.xml  com.stremio.Stremio.metainfo.xml
images/: stremio-icon-dmg.icns  stremio.icns
mac/: appdmg.json  developer_id_Installer.p12  developer_id_app.p12  finalize.sh  get-qt59.sh  keychain.sh  keychain_profile  libcrypto.3.dylib  mac_profile  notarizer.sh  pack.sh  qt5-mac.sh
mac/images/: stremio-icon-dmg.icns
scripts/: release-version.js
windows/: generate_stremio-runtime.cmd  smartcode-20181204-20211204.pfx  smartcode-20211118-20241118.pfx
windows/installer/: fileassoc.nsh  windows-installer.nsi
